--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,28 +1,35 @@
-# Database
+# Environment Configuration
+NODE_ENV=development
+PORT=5000
+
+# Database Configuration
 MONGODB_URI=mongodb://localhost:27017/iasdesk
 
-# JWT Secret
+# JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRE=30d
 
-# Twilio Configuration
+# Fast2SMS Configuration (Primary OTP Service)
+FAST2SMS_API_KEY=your_fast2sms_api_key_here
+FAST2SMS_SENDER_ID=IASDESK
+
+# Twilio Configuration (Legacy - can be removed)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=your_twilio_phone_number
 
-# Payment Configuration
+# Payment Configuration (Razorpay)
 RAZORPAY_KEY_ID=your_razorpay_key_id
 RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+
+# Payment Configuration (Stripe)
 STRIPE_SECRET_KEY=your_stripe_secret_key
-
-# Cloudinary Configuration (Add these new variables)
-CLOUDINARY_CLOUD_NAME=du9fq7bej
-CLOUDINARY_API_KEY=841389819862682
-CLOUDINARY_API_SECRET=DlxOVYXznODrIgB_0-T3MGNajUo
-
-# Server Configuration
-PORT=5000
-NODE_ENV=development
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 
 # Admin Configuration
-ADMIN_EMAIL=admin@iasdesk.com
-ADMIN_PASSWORD=admin123
+ADMIN_SECRET=admin_secret_key_for_admin_access
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
