--- a/backend/package.json
+++ b/backend/package.json
@@ -25,14 +25,14 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "fast-two-sms": "^3.0.0",
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "razorpay": "^2.9.6",
-    "stripe": "^18.4.0",
-    "twilio": "^5.8.0"
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
