--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,3 +1,7 @@
 REACT_APP_API_URL=https://iasdesk-educational-platform-2.onrender.com/api
 REACT_APP_RAZORPAY_KEY_ID=your_razorpay_key_id
 GENERATE_SOURCEMAP=false
+
+# Contact Information
+REACT_APP_PHONE_NUMBER=+91-9899530320
+REACT_APP_WHATSAPP_NUMBER=+91-9899530320
